공유 위치 수정

--- a/4.html
+++ b/4.html
@@ -23,17 +23,17 @@
     <li><a href="4.html"style="color : white">메인보드</a></li>
     <li><a href="5.html"style="color : white">HDD,SSD</a></li>
     <li><a href="7.html"style="color : white">파워</a></li>
-
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+  <div class="addthis_inline_share_toolbox">
   </ol>
 </div>
 <div class="col-2">
 <h2>메인보드</h2>
 <p>메인보드는 컴퓨터의 땅과 같다.</p>
 <p>각종 부품들을 장착할 수 있는 소켓과 슬롯이 존재, 중요 부품들에게 전력을 공급하는 등 크고 작은 역할을 함</p>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<div class="addthis_inline_share_toolbox"></div>
+</div>
 <ins class="kakao_ad_area" style="display:none;"
 data-ad-unit    = "DAN-PZUOIkAaVM2EsdCR"
 data-ad-width   = "320"
