--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <li><a href="5.html" style="color : white">HDD,SSD</a></li>
     <li><a href="7.html" style="color : white">파워</a></li>
   </ol>
-  <p><img src="index1.png" width=90%></p>
   <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -41,6 +40,9 @@ data-ad-width   = "320"
 data-ad-height  = "100"></ins>
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 
+</div>
+<div class="col-2">
+  <p><img src="index1.png" width=90%></p>
 </div>
 </div>
 
