--- a/2.html
+++ b/2.html
@@ -36,7 +36,10 @@
             <li><a href="5.html" style="color : white">HDD,SSD</a></li>
             <li><a href="7.html" style="color : white">파워</a></li>
           </ol>
-
+          <!-- Go to www.addthis.com/dashboard to customize your tools -->
+        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
+        <!-- Go to www.addthis.com/dashboard to customize your tools -->
+        <div class="addthis_inline_share_toolbox">
         </div>
         <div class="col-2">
           <h2>RAM</h2>
@@ -44,10 +47,7 @@
           <p><img src="RAM.png" width="60%"></p>
           <p>이렇듯 RAM은 많으면 많을 수록 좋다. 즉, 다다익선</p>
           <p><img src="RAM9.png" width=70%></p>
-              <!-- Go to www.addthis.com/dashboard to customize your tools -->
-          <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
-          <!-- Go to www.addthis.com/dashboard to customize your tools -->
-          <div class="addthis_inline_share_toolbox"></div>
+              </div>
           <ins class="kakao_ad_area" style="display:none;"
 data-ad-unit    = "DAN-PZUOIkAaVM2EsdCR"
 data-ad-width   = "320"
