--- a/3.html
+++ b/3.html
@@ -34,6 +34,10 @@
     <li><a href="5.html" style="color : white">HDD,SSD</a></li>
     <li><a href="7.html" style="color : white">파워</a></li>
     </ol>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<div class="addthis_inline_share_toolbox">
   </div>
 <div class="col-2">
 <h2>그래픽카드(VGA)</h2>
@@ -46,10 +50,7 @@
   <P><img src="VGA3.png" width="90%"></P>
   <P><img src="VGA4.png" width="90%"></P>
 
-    <!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5fb8adbba9711f26"></script>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<div class="addthis_inline_share_toolbox"></div>  <ins class="kakao_ad_area" style="display:none;"
+    </div>  <ins class="kakao_ad_area" style="display:none;"
 data-ad-unit    = "DAN-PZUOIkAaVM2EsdCR"
 data-ad-width   = "320"
 data-ad-height  = "100"></ins>
